# broccoli

./: .gitignore  Cargo.toml  Dockerfile.rabbitmq  LICENSE.txt  README.md  run-tests.sh
.github/workflows/: integ_tests.yaml
benches/: amqp_benchmark.rs  queue_benchmark.rs  surrealdb_benchmark.rs
broccoli-core/: Cargo.toml
broccoli-core/examples/: consumer.rs  publisher.rs
broccoli-core/src/: error.rs  lib.rs  queue.rs
broccoli-core/src/brokers/: broker.rs  connect.rs  mod.rs
broccoli-core/src/brokers/redis/: broker.rs  mod.rs  utils.rs
broccoli-macros/: Cargo.toml
broccoli-macros/src/: lib.rs
examples/: consumer.rs  publisher.rs
src/: error.rs  lib.rs  queue.rs
src/brokers/: broker.rs  connect.rs  management.rs  mod.rs
src/brokers/rabbitmq/: broker.rs  management.rs  mod.rs  utils.rs
src/brokers/redis/: broker.rs  management.rs  mod.rs  utils.rs
src/brokers/surrealdb/: broker.rs  mod.rs  utils.rs
tests/: edge_cases.rs  fairness.rs  happy_path.rs  management.rs
tests/common/: mod.rs
