[package]
name = "broccoli_queue"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "Broccoli is a simple, fast, and reliable job queue for Rust."
repository = "https://github.com/densumesh/broccoli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1.83"
thiserror = "2.0.7"
futures = "0.3.31"
sha256 = "1.5.0"
log = "0.4.22"
time = "0.3.37"
lapin = { version = "2.5.0", optional = true }
deadpool = { version = "0.12.1", optional = true }
deadpool-lapin = { version = "0.12.1", optional = true }
bb8-redis = { version = "0.18.0", optional = true }
redis = { version = "0.27.5", features = [
    "tokio-rustls-comp",
    "aio",
], optional = true }
dashmap = "6.1.0"
derive_more = { version = "2.0.1", features = ["display"], optional = true }

[dev-dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
env_logger = "0.11.5"
lazy_static = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
default = []
redis = ["dep:bb8-redis", "dep:redis"]
rabbitmq = ["dep:lapin", "dep:deadpool", "dep:deadpool-lapin"]
test-fairness = []

# Allows for access to the management API for the queue.
management = ["dep:derive_more"]

[[bench]]
name = "amqp_benchmark"
harness = false

[[bench]]
name = "redis_benchmark"
harness = false

# Add this section for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
